# controller/user.go
@@ -26,6 +26,7 @@ type IUserController interface {
 	UserDetail(w http.ResponseWriter, r *http.Request)
 	UserCreate(w http.ResponseWriter, r *http.Request)
 	UserUpdate(w http.ResponseWriter, r *http.Request)
+	UserUpdatePassword(w http.ResponseWriter, r *http.Request)
 	UserDelete(w http.ResponseWriter, r *http.Request)
 }
 
@@ -164,6 +165,44 @@ func (uc *UserController) UserUpdate(w http.ResponseWriter, r *http.Request) {
 	}
 
 	response.ResponseSuccess(w, result.Result, constant.StatusOKJson)
+}
+
+// @Tags        User
+// @Summary     Update User Password
+// @Description Example value: `body:{"oldPassword":"1234567890","newPassword":"Aa123456!"}`
+// @Accept      json
+// @Produce     json
+// @Param       "request 	body"	body	dto.UpdateUserPasswordRequest	true 	"example payload"
+// @Security	Bearer
+// @Router    	/user/password [put]
+func (uc *UserController) UserUpdatePassword(w http.ResponseWriter, r *http.Request) {
+	var params dto.UpdateUserPasswordRequest
+	err := json.NewDecoder(r.Body).Decode(&params)
+	if err != nil {
+		response.ResponseError(w, errors.New("invalid parameter"), constant.StatusDataBadRequest)
+		return
+	}
+
+	ctxData, _, err := utils.GetUserClaimsFromContext(r)
+	if err != nil {
+		response.ResponseError(w, err, constant.StatusInternalServerError)
+		return
+	}
+	params.UserId = utils.StringToInt64(ctxData.Id)
+
+	if err := utils.Validate(params); err != nil {
+		response.ResponseError(w, err, constant.StatusDataBadRequest)
+		return
+	}
+
+	result := uc.UserService.UpdateUserPassword(params)
+	if result.HasErr {
+		response.ResponseError(w, result.Err, result.InternalCode)
+		return
+	}
+
+	response.ResponseSuccess(w, result.Result, constant.StatusOKJson)
+
 }
 
 // @Tags        User
